--- a/trabalho2/cadastro.html
+++ b/trabalho2/cadastro.html
@@ -89,7 +89,7 @@
                 </div>
                 <div>
                     <label for="logradouro">Logradouro:</label>
-                    <input type="text" name="cepCliente" id="logradouro" required>
+                    <input type="text" name="logradouroCliente" id="logradouro" required>
                 </div>
                 <div>
                     <label for="bairro">Bairro:</label>
