--- a/trabalho3/ex1/index.html
+++ b/trabalho3/ex1/index.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículo de Naldiano</title>
     <link rel="stylesheet" href="style.css">
-    <title>Currículo de Matheus</title>
 </head>
 
 <body>
-    <main>
-        <img src="images/foto_matheus.png" alt="Foto do Matheus">
-        <h1>Matheus Matos Andrade</h1>
+
+    <div id="container">
+        <img src="images/jogador.png" alt="Foto de Naldiano">
+        <h1>Naldiano</h1>
+
         <section>
             <h2>Perfil</h2>
-            <p>Meu nome é Matheus Matos, sou estudante de Ciência da Computação na Universidade Federal de Uberlândia
-                (UFU) e
-                atualmente estou cursando o sétimo período. Tenho interesse nas áreas de Finanças, Marketing Digital e
-                DevOps, e
-                busco constantemente aplicar os conhecimentos adquiridos ao longo da graduação em projetos práticos.</p>
-            <p>Nesta atividade de Programação para Internet, apresento uma solução desenvolvida utilizando HTML5,
-                conforme os
-                requisitos propostos, com foco em estruturação semântica e organização do conteúdo.</p>
-            <h2>Principais Competências</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloremque, provident quibusdam porro minima sapiente, corporis magnam libero dolor deleniti,
+                eaque itaque obcaecati sed consequuntur dolore sit dolorem officia dicta rem?
+            </p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sint, tempore
+                nulla repellat esse amet quis? Eveniet quia autem consequuntur optio!
+                Quis distinctio dicta nisi hic earum? Eaque, in unde.
+            </p>
+        </section>
+
+        <section>
+            <h2>Principais competências</h2>
             <ul>
-                <li>Python + FastAPI</li>
-                <li>CrewAI</li>
-                <li>Meta e Google Ads</li>
-                <li>VueJS e NestJS</li>
-                <li>Azure e AWS</li>
+                <li>Mito da Champions League</li>
+                <li>Melhor que o Messi</li>
+                <li>Robozão</li>
+                <li>Quase 1000 gols</li>
+                <li>Siu</li>
             </ul>
         </section>
+
         <section>
-            <h2>Formação</h2>
-            <p>Ensino
-                Médio Completo pelo colégio <a href="https://www.instagram.com/mastermeduberaba/">MasterMed</a> e
-                Graduando
-                em
-                Ciência da Computação pela <a href="https://ufu.br/">Universidade Federal de Uberlândia</a> </p>
+            <h2>Formação Acadêmica</h2>
+            <p>Graduado em futebol pela <a href="https://ufu.br/">Base do Corinthians</a>.</p>
+            <p>Graduado em cabeceio pela <a href="https://ufmg.br/">Base do Corinthians</a>.</p>
         </section>
 
         <section id="experiencia">
             <h2>Experiência Profissional</h2>
-            <ol>
-                <li>Valky Ecom (2022 - 2023)
-                    <ul>
-                        <li>Desenvolvimento de Site Shopify</li>
-                        <li>Gestão de Tráfego</li>
-                        <li>Design e SEO</li>
-                    </ul>
+            <ul>
+                <li>20 aos 40 anos de idade
+                    <ol>
+                        <li>Real Madrid - 2003 - 2018</li>
+                        <li>Corinthians - 2018 - 2026</li>
+                    </ol>
                 </li>
-                <li>Algar Tech (2024 - Agora)
-                    <ul>
-                        <li>Estágio em desenvolvimento Full Stack</li>
-                        <li>Criação de APIs em FastAPI + CrewAI</li>
-                        <li>Desenvolvimento Backend utilizando NestJS</li>
-                    </ul>
-                </li>
-            </ol>
-            <a href="experiencia.html"> Veja as experiências profissionais em detalhes</a>
+            </ul>
+            <a href="experiencia.html">Veja a experiência profissional completa</a>
         </section>
+
         <section>
             <h2>Contato</h2>
             <address>
-                <p><img src="images/endereco.png" alt="Endereço" width="30" height="30">Santa Mônica</p>
-                <p><img src="images/email.png" alt="Email" width="30" height="30"><a
-                        href="mailto:matheusmmandrade@gmail.com">matheusmmandrade@gmail.com</a></p>
-                <p><img src="images/telefone.png" alt="Telefone" width="30" height="30"><a
-                        href="tel:034-99671-8841">34996718841</a></p>
+                <p>
+                    <img src="images/endereco.png" alt="Endereço" width="30" height="30">
+                    Rua dos Sonhos, 123 – Siu City
+                </p>
+                <p>
+                    <img src="images/telefone.png" alt="Telefone" width="30" height="30">
+                    <a href="tel:+5511999999999">(11) 99999-9999</a>
+                </p>
+                <p>
+                    <img src="images/email.png" alt="E-mail" width="30" height="30">
+                    <a href="mailto:cr7@futebol.com">cr7@futebol.com</a>
+                </p>
             </address>
         </section>
-    </main>
+
+    </div>
+
 </body>
 
 </html>
