--- a/trabalho3/ex2/galeria.html
+++ b/trabalho3/ex2/galeria.html
@@ -12,16 +12,16 @@
 
 <body>
     <header>
-        <h1 class="tituloh1">Clínica Matos</h1>
+        <h1 id="main-header">Clínica Matos</h1>
     </header>
-    <nav id="navbar">
+    <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
         </ul>
     </nav>
-    <main id="main-galeria">
+    <main>
         <h2>Nossa estrutura</h2>
         <table>
             <tr>
@@ -38,7 +38,7 @@
             </tr>
         </table>
     </main>
-    <footer id="footer">
+    <footer>
         <address>Av João Naves de Matos, Bloco 1B, Sala 1B202, Uberlândia</address>
     </footer>
 </body>
