--- a/trabalho5/ex2/index.html
+++ b/trabalho5/ex2/index.html
@@ -1,83 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Anúncios de Produtos</title>
 </head>
 
 <body>
     <header>
-        <h1>Anúncios encontrados</h1>
+        <h1>Anúncios encontrados...</h1>
     </header>
     <main>
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 1</h2>
-                <img class="card-img" src="images/1.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">100R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img1.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat non nam in error assumenda at magni
+                quasi itaque.</p>
+            <p class="preco">R$ 2.299,00</p>
         </article>
+
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 2</h2>
-                <img class="card-img" src="images/2.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">200R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img2.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, unde!</p>
+            <p class="preco">R$ 2.899,00</p>
         </article>
+
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 3</h2>
-                <img class="card-img" src="images/3.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">300R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img3.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat non nam in error assumenda.</p>
+            <p class="preco">R$ 3.299,00</p>
         </article>
+
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 4</h2>
-                <img class="card-img" src="images/4.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">400R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img4.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, unde! Lorem ipsum dolor sit amet.</p>
+            <p class="preco">R$ 1.299,00</p>
         </article>
+
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 5</h2>
-                <img class="card-img" src="images/5.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">500R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img5.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="preco">R$ 2.599,00</p>
         </article>
+
         <article class="card">
-            <div class="topo">
-                <h2 class="card-titulo">Produto 6</h2>
-                <img class="card-img" src="images/6.jpg" alt="imagem 1">
-            </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, quisquam ducimus
-                ipsum dolor saepe
-                corporis nulla non nesciunt totam quis libero tempore sequi laboriosam sint officia soluta nemo maiores
-                magnam.</p>
-            <p class="preco">600R$</p>
+            <h3>Notebook de 14"</h3>
+            <img src="./images/img6.jpg" alt="Notebook Cinza">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, unde.</p>
+            <p class="preco">R$ 2.999,00</p>
         </article>
     </main>
 
