--- a/trabalho3/ex1/experiencia.html
+++ b/trabalho3/ex1/experiencia.html
@@ -1,68 +1,58 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiência de Matheus</title>
+    <title>Currículo de Fulano de Tal</title>
 </head>
-
 <body>
-    <h1 id="inicio">Experiência Profissional Completa</h1>
-    <figure>
-        <img src="images/foto_matheus.png" alt="Foto Matheus">
-        <figcaption>Foto de Matheus</figcaption>
-    </figure>
 
+    <h1>Experiência Profissional Detalhada</h1>
+    <hr>
+
+    <h2 id="real-madrid">Real Madrid (2003–2018)</h2>
+    <p>Naldiano foi o principal jogador do clube durante mais de uma década, conquistando títulos importantes e quebrando recordes históricos.</p>
+
+    <h2>Corinthians (2018–2026)</h2>
+    <p>No retorno ao Brasil, liderou o time paulista à conquista da <abbr title="Confederação Sul-Americana de Futebol">CONMEBOL</abbr> Libertadores e outros campeonatos nacionais.</p>
+
+    <hr>
+
+    <h2>Resumo das Conquistas</h2>
     <table>
-        <tr>
-            <th>Empresa</th>
-            <th>Cargo</th>
-            <th>Tempo</th>
-        </tr>
-        <tr>
-            <td><abbr title="Freelancer">Freela</abbr></td>
-            <td>Design, desenvolvimento de sites, social media</td>
-            <td>2023 - Agora</td>
-        </tr>
-        <tr>
-            <td>Valky Ecom</td>
-            <td>Desenvolvedor de Sites Shopify</td>
-            <td>2023 - 2024</td>
-        </tr>
-        <tr>
-            <td>Liga do Mercado Financeiro</td>
-            <td>Trainee</td>
-            <td>Fevereiro 2024 - Agosto 2024</td>
-        </tr>
-        <tr>
-            <td>Liga do Mercado Financeiro</td>
-            <td>Gerente de Equity Research</td>
-            <td>Agosto 2024 - Fevereiro 2025</td>
-        </tr>
-        <tr>
-            <td>Algar Tech</td>
-            <td>Estagário em Desenvolvimento Full Stack</td>
-            <td>Outubro 2024 - Agora</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Clube</th>
+                <th>Período</th>
+                <th>Principais Títulos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Real Madrid</td>
+                <td>2003–2018</td>
+                <td>4 Champions League, 2 La Liga, 3 Mundiais</td>
+            </tr>
+            <tr>
+                <td>Corinthians</td>
+                <td>2018–2026</td>
+                <td>1 Libertadores, 2 Brasileirões</td>
+            </tr>
+        </tbody>
     </table>
 
-    <figure>
-        <img src="images/lmf-sp.jpg" alt="Matheus em SP com a LMF" height="300" width="400">
-        <figure>Matheus com a <abbr title="Liga do Mercado Financeiro UFU"> LMF</abbr> em São Paulo</figure>
-    </figure>
-    <figure>
+    <hr>
 
-        <img src="images/expo-ecom.jpg" alt="Matheus em SP com a LMF" height="500" width="400">
-        <figure>Matheus na Expo Ecom Uberlândia</figure>
+    <h2>Naldiano em Ação</h2>
+    <figure>
+        <img src="images/jogador2.png" alt="CR7 jogando futebol" width="300">
+        <figcaption>Naldiano durante um jogo decisivo, representando seu clube com garra.</figcaption>
     </figure>
 
-    <a href="#inicio">Clique para voltar ao início da página</a>
+    <hr>
 
-    <p><a href="index.html"><img src="images/voltar.png" alt="Ícone para voltar"></a>Clique para voltar para a página
-        inicial</p>
-
+    <p><a href="#real-madrid">Voltar para o topo (Real Madrid)</a></p>
+    <p><a href="index.html">← Voltar para a página principal</a></p>
 
 </body>
-
 </html>
