--- a/trabalho3/ex2/cadastro.html
+++ b/trabalho3/ex2/cadastro.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="forms.css">
-
+    <link rel="stylesheet" href="style.css">
     <meta name="description"
         content="Clínica Matos é uma clínica consagrada no tratamento de problemas relacionados à corridas de longas distâncias">
     <title>Formulário de Cadastro</title>
@@ -13,7 +12,7 @@
 
 <body>
     <header>
-        <h1 id="cadastro-h1">Clínica Matos</h1>
+        <h1 id="main-header">Clínica Matos</h1>
     </header>
     <nav>
         <ul>
@@ -84,6 +83,8 @@
                 <div>
                     <label for="logradouroSelect">Tipo de logradouro:</label>
                     <select name="tipoLogradouroCliente" id="logradouroSelect" required>
+                        <option value="" selected disabled>Selecione uma opção...</option>
+
                         <option value="Rua">Rua</option>
                         <option value="Avenida">Avenida</option>
                         <option value="Praça">Praça</option>
