--- a/trabalho10/index.html
+++ b/trabalho10/index.html
@@ -9,8 +9,10 @@
       padding-top: 3rem;
       font-family: Helvetica, Arial, sans-serif;
     }
-  
-    a:link, a:visited, a:active {
+
+    a:link,
+    a:visited,
+    a:active {
       color: #555;
       text-decoration: none;
       display: block;
@@ -21,17 +23,17 @@
       margin: 5px auto;
       width: 500px;
     }
-  
+
     a:hover {
       background-color: #dedede;
     }
-  
+
     hr {
       width: 600px;
       margin-top: 1rem;
       margin-bottom: 1rem;
-    }  
-  </style>  
+    }
+  </style>
 </head>
 
 <body>
@@ -43,8 +45,11 @@
   <a href="ex3-cadastro-mvc/">Exemplo 3 - Cadastrar Cliente (MVC simplificado)</a>
   <a href="ex3-cadastro-mvc/clientes.html">Exemplo 3 - Visualizar Clientes (MVC simplificado)</a>
   <hr>
+  <a href="ex3-cad-produto-mvc/">Exemplo 3 - Cadastrar Cliente (MVC simplificado)</a>
+  <a href="ex3-cad-produto-mvc/produtos.html">Exemplo 3 - Visualizar Clientes (MVC simplificado)</a>
+  <hr>
   <a href="ex4-transacao/">Exemplo 4 - Cadastro em duas tabelas (transação)</a>
-  <a href="ex4-transacao/clientes.html">Exemplo 4 - Mostrar clientes e endereços</a> 
+  <a href="ex4-transacao/clientes.html">Exemplo 4 - Mostrar clientes e endereços</a>
   <hr>
   <a href="ex5-login/">Exemplo 5 - Testar login</a>
 </body>
