Change: trab10 ex 3

--- a/trabalho10/index.html
+++ b/trabalho10/index.html
@@ -45,8 +45,8 @@
   <a href="ex3-cadastro-mvc/">Exemplo 3 - Cadastrar Cliente (MVC simplificado)</a>
   <a href="ex3-cadastro-mvc/clientes.html">Exemplo 3 - Visualizar Clientes (MVC simplificado)</a>
   <hr>
-  <a href="ex3-cad-produto-mvc/">Exemplo 3 - Cadastrar Cliente (MVC simplificado)</a>
-  <a href="ex3-cad-produto-mvc/produtos.html">Exemplo 3 - Visualizar Clientes (MVC simplificado)</a>
+  <a href="ex3-cad-produto-mvc/">Exemplo 3 - Cadastrar Produtos (MVC simplificado)</a>
+  <a href="ex3-cad-produto-mvc/produtos.html">Exemplo 3 - Visualizar Produtos (MVC simplificado)</a>
   <hr>
   <a href="ex4-transacao/">Exemplo 4 - Cadastro em duas tabelas (transação)</a>
   <a href="ex4-transacao/clientes.html">Exemplo 4 - Mostrar clientes e endereços</a>
