--- a/trabalho10/ex3-cad-produto-mvc/index.html
+++ b/trabalho10/ex3-cad-produto-mvc/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- 1: Tag de responsividade -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cadastro de Cliente</title>
+  <title>Cadastro de Produto</title>
 
   <!-- 2: Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,9 +14,11 @@
     body {
       padding: 1rem;
     }
+
     button {
       margin-top: 1rem;
     }
+
     p {
       margin-top: 1rem;
     }
@@ -28,47 +30,25 @@
   <div class="container">
 
     <main>
-      <form action="controlador.php?acao=adicionarCliente" method="POST" class="row g-3">
+      <form action="controlador.php?acao=adicionarProduto" method="POST" class="row g-3">
 
         <!-- Nome e CPF -->
         <div class="col-9">
-          <label for="nome" class="form-label">Nome completo</label>
+          <label for="nome" class="form-label">Nome do Produto</label>
           <input type="text" name="nome" class="form-control" id="nome">
         </div>
-        <div class="col-3">
-          <label for="cpf" class="form-label">CPF</label>
-          <input type="text" name="cpf" class="form-control" id="cpf">
+        <div class="col-9">
+          <label for="marca" class="form-label">Marca</label>
+          <input type="text" name="marca" class="form-control" id="marca">
         </div>
 
         <!-- E-mail e senha -->
         <div class="col-sm-9">
-          <label for="email" class="form-label">E-mail</label>
-          <input type="email" name="email" class="form-control" id="email">
-        </div>
-        <div class="col-sm-3">
-          <label for="senha" class="form-label">Senha</label>
-          <input type="password" name="senha" class="form-control" id="senha">
+          <label for="descricao" class="form-label">Descrição do Produto</label>
+          <input type="text" name="descricao" class="form-control" id="descricao">
         </div>
 
-        <!-- Data de nascimento, estado civil e altura -->
-        <div class="col-sm">
-          <label for="dataNascimento" class="form-label">Data Nascimento</label>
-          <input type="date" name="dataNascimento" class="form-control" id="dataNascimento">
-        </div>
-        <div class="col-sm">
-          <label for="estadoCivil" class="form-label">Estado Civil</label>
-          <select name="estadoCivil" class="form-select" id="estadoCivil">
-            <option selected>Selecione</option>
-            <option value="solteiro">Solteiro</option>
-            <option value="casado">Casado</option>
-            <option value="viuvo">Viúvo</option>
-          </select>
-        </div>
-        <div class="col-sm-3">
-          <label for="altura" class="form-label">Altura (cm)</label>
-          <input type="number" name="altura" class="form-control" id="altura" value="170">
-        </div>
-        
+
         <div class="col-12">
           <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
