--- a/trabalho10/ex3-cad-produto-mvc/produtos.html
+++ b/trabalho10/ex3-cad-produto-mvc/produtos.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- 1: Tag de responsividade -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Clientes cadastrados</title>
+  <title>Produtos cadastrados</title>
 
   <!-- 2: Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
