--- a/trabalho10/ex3-cad-produto-mvc/produtos.html
+++ b/trabalho10/ex3-cad-produto-mvc/produtos.html
@@ -84,6 +84,7 @@
         tr.appendChild(td2);
         tr.appendChild(td3);
         tr.appendChild(td4);
+        tbody.appendChild(tr);
       }
     }
 
