CHange: index.html trab10 ex 4

--- a/trabalho10/index.html
+++ b/trabalho10/index.html
@@ -51,6 +51,9 @@
   <a href="ex4-transacao/">Exemplo 4 - Cadastro em duas tabelas (transação)</a>
   <a href="ex4-transacao/clientes.html">Exemplo 4 - Mostrar clientes e endereços</a>
   <hr>
+  <hr>
+  <a href="ex4-transacao/novo-paciente.html">Exemplo 4 - Cadastro paciente (transação)</a>
+  <hr>
   <a href="ex5-login/">Exemplo 5 - Testar login</a>
 </body>
 
