--- a/trabalho11/Exemplos-Ajax-XHR/Exemplos-Ajax-XHR/ex1-hello-ajax/index.html
+++ b/trabalho11/Exemplos-Ajax-XHR/Exemplos-Ajax-XHR/ex1-hello-ajax/index.html
@@ -51,7 +51,7 @@
     const button = document.querySelector("button");
     button.addEventListener("click", loadExtraContent);
   </script>
-  
+  <!-- Esse código JavaScript cria uma requisição para buscar um arquivo HTML (conteudoAdicional.html) quando um botão é clicado. Ele usa AJAX para fazer isso em segundo plano, sem recarregar a página. Assim que o conteúdo do arquivo é recebido, ele é inserido no final da tag <main> na página atual. -->
 </body>
 
 </html>
