--- a/trabalho12/ex1-cep-fetch/index.html
+++ b/trabalho12/ex1-cep-fetch/index.html
@@ -12,6 +12,7 @@
     body {
       padding-top: 2rem;
     }
+
     h3 {
       margin-bottom: 2rem;
     }
@@ -22,7 +23,7 @@
 
   <div class="container">
     <h3>Preenchendo o endereço com Ajax</h3>
-  
+
     <form class="row g-3">
       <div>
         <label for="cep" class="form-label">Informe o CEP no formato xxxxx-xxx (Ex. 38400-100)</label>
@@ -41,48 +42,36 @@
         <input type="text" class="form-control" id="cidade" name="cidade">
       </div>
     </form>
-  
+
   </div>
 
   <script>
 
     function buscaEndereco(cep) {
-      
-      if (cep.length != 9) return;      
+
+      if (cep.length != 9) return;
       let form = document.querySelector("form");
-      
-      fetch("busca-endereco.php?cep=" + cep)
+
+      fetch("busca-endereco.php", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded"
+        },
+        body: "cep=" + cep
+      })
+
         .then(response => {
           if (!response.ok) {
-            // A requisição finalizou com sucesso a nível de rede,
-            // porém o servidor retornou um código de status
-            // fora da faixa 200-299 (indicando outros possíveis erros).
-            // Neste caso, lança uma exceção para que a promise seja
-            // rejeitada. Como o próximo 'then' não possui callback 
-            // de erros, será executada a função do próximo 'catch'.
             throw new Error(response.status);
-            // return Promise.reject(response.status); // outra opção
           }
-
-          // Requisição finalizada com sucesso e o servidor
-          // retornou um código de status de sucesso (200-299). 
-          // O método json() faz a leitura do corpo da resposta contendo
-          // a string JSON, de forma assíncrona, e converte para 
-          // um objeto JavaScript correspondente. Quando essa 
-          // operação finalizar com sucesso, a função de callback
-          // do próximo then receberá o resultado e será executada.
-          return response.json(); // Atenção para o 'return' aqui
+          return response.json();
         })
         .then(endereco => {
-          // utiliza os dados para preencher o formulário
           form.rua.value = endereco.rua;
           form.bairro.value = endereco.bairro;
           form.cidade.value = endereco.cidade;
         })
         .catch(error => {
-          // Ocorreu um erro na comunicação com o servidor ou
-          // no processamento da requisição no PHP, que pode não
-          // ter retornado uma string JSON válida.
           form.reset();
           console.error('Falha inesperada: ' + error);
         });
