--- a/trabalho12/index.html
+++ b/trabalho12/index.html
@@ -12,7 +12,9 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 
-  a:link, a:visited, a:active {
+  a:link,
+  a:visited,
+  a:active {
     color: #555;
     text-decoration: none;
     display: block;
@@ -27,7 +29,6 @@
   a:hover {
     background-color: #dedede;
   }
-
 </style>
 
 <body>
@@ -36,6 +37,9 @@
   <a href="ex3-cep-await/">Exemplo 3 - Preenchimento do endereço com Fetch e async/await</a>
   <a href="ex4-encadeamento-await">Exemplo 4 - Encadeamento de requisições assíncronas com Fetch e async/await</a>
   <a href="ex5-infinite-scroll/">Exemplo 5 - Rolagem infinita</a>
+  <a href="cotacao-simples.html">Exercício Cotação Simples (Alpha Vantage)</a>
+  <a href="cotacao-multipla.html">Exercício Cotações Múltiplas (Alpha Vantage)</a>
+
 </body>
 
 </html>
