--- a/trabalho12/index.html
+++ b/trabalho12/index.html
@@ -37,8 +37,8 @@
   <a href="ex3-cep-await/">Exemplo 3 - Preenchimento do endereço com Fetch e async/await</a>
   <a href="ex4-encadeamento-await">Exemplo 4 - Encadeamento de requisições assíncronas com Fetch e async/await</a>
   <a href="ex5-infinite-scroll/">Exemplo 5 - Rolagem infinita</a>
-  <a href="cotacao-simples.html">Exercício Cotação Simples (Alpha Vantage)</a>
-  <a href="cotacao-multipla.html">Exercício Cotações Múltiplas (Alpha Vantage)</a>
+  <a href="ex6/cotacao-multipla.html">Exercício Cotação Simples (Alpha Vantage)</a>
+  <a href="ex6/cotacao-simples.html">Exercício Cotações Múltiplas (Alpha Vantage)</a>
 
 </body>
 
