--- a/trabalho12/index.html
+++ b/trabalho12/index.html
@@ -39,6 +39,7 @@
   <a href="ex5-infinite-scroll/">Exemplo 5 - Rolagem infinita</a>
   <a href="ex6/cotacao-multipla.html">Exercício Cotação Simples (Alpha Vantage)</a>
   <a href="ex6/cotacao-simples.html">Exercício Cotações Múltiplas (Alpha Vantage)</a>
+  <a href="ex7/consulta-fipe.html">Exercício 7 - Consulta Tabela FIPE</a>
 
 </body>
 
