--- a/estudoP2/trabalho10/ex3-cad-produto-mvc/produtos.html
+++ b/estudoP2/trabalho10/ex3-cad-produto-mvc/produtos.html
@@ -30,12 +30,8 @@
         <tr>
           <th></th>
           <th>Nome</th>
-          <th>CPF</th>
-          <th>Email</th>
-          <th>Nascimento</th>
-          <th>Estado Civil</th>
-          <th>Altura</th>
-          <th>SenhaHash</th>
+          <th>Marca</th>
+          <th>Descricao</th>
         </tr>
       </thead>
       <tbody>
